--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@ BACKEND_PORT=${BACKEND_PORT}
 DB_USER=${DB_USER}
 DB_PASSWORD=${DB_PASSWORD}
 DB_DATABASE=${DB_DATABASE}
-DB_HOST=localhost
+DB_HOST=${DB_HOST}
 DB_PORT=${DB_PORT}
